Avoid a warning by JDK>=9